<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="lastname">LastName</string>
    <string name="marks">Marks</string>
    <string name="adddata">AddData</string>
    <string name="view_data">View Data</string>
    <string name="update">Update</string>

</resources>
